# ghost-browsers

./: .dockerignore  .env.example  .eslintrc.cjs  .gitignore  .ruff.toml  AGENTS.md  AGENT_NOTES.md  LICENSE  Makefile  README.md  READMI.md  docker-compose.dev.yml  docker-compose.yml  package.json  pnpm-lock.yaml  smoke.py
.github/workflows/: docker-worker.yml  gateway-image.yml  runner-image.yml  ui-image.yml  ui-tests.yml  vnc-gateway-image.yml
apps/ui/: AGENTS.md  AGENT_NOTES.md  Dockerfile  README-TASK.md  README.md  eslint.config.js  index.html  nginx.conf  package.json
apps/ui/public/: silent-check-sso.html
apps/ui/src/: App.tsx  README-TASK.md  main.tsx  styles.css  vite-env.d.ts
apps/ui/src/__tests__/: AuthProvider.fallback.test.tsx  DashboardPage.test.tsx  SessionActions.test.tsx  smoke.test.ts  (+5 more)
camoufox/: __init__.py  __main__.py  sync_api.py
control-plane/: openapi.control.yaml  pyproject.toml
control-plane/camofleet_control/: __init__.py  __main__.py  config.py  main.py  models.py  service.py
control-plane/tests/: test_service.py  test_state.py  test_vnc_overrides.py
deploy/helm/: README.md
deploy/helm/camofleet/: Chart.yaml  values.yaml
deploy/k8s/: README.md  control.deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  ui.deployment.yaml  vnc-gateway.deployment.yaml  worker-vnc.deployment.yaml  worker.deployment.yaml
deploy/traefik/: README.md  camofleet-add-vnc-prefix.yaml  camofleet-ingressroute.yaml  camofleet-strip-api.yaml
docker/: Dockerfile.control  Dockerfile.runner  Dockerfile.runner-core  Dockerfile.runner-vnc  Dockerfile.ui  Dockerfile.vnc-gateway  Dockerfile.worker  nginx.conf
docker/scripts/: install-windows-fonts.sh  runner-entrypoint.sh  vnc-start.sh  worker-entrypoint.sh
docs/: architecture.md  configuration.md  pr_end_of_file_analysis.md  runner-parity.md
docs/helm/: camoufox_worker.values.yaml
docs/helm/platform/: Chart.yaml  camoufox-worker.values.yaml  gateway.values.yaml  runner.values.yaml  ui.values.yaml  values.yaml  vnc-gateway.values.yaml
docs/ui/: camo-fleet-ui-review.md
runner/: pyproject.toml
runner/src/camoufox_runner/: __init__.py  __main__.py  config.py  main.py  models.py  sessions.py  url_utils.py
runner/tests/: test_sessions.py  test_start_url.py  test_vnc_public_url.py
scripts/: measure-startup.mjs  vnc_smoke_test.py
services/camoufox_worker/: AGENTS.md  AGENT_NOTES.md  Dockerfile  README-TASK.md  README.md  pyproject.toml  smoke.py
services/camoufox_worker/tests/: conftest.py  test_cli.py  test_jobs_models.py  test_queue_consumer.py  test_runner_native.py  test_runner_orch.py  test_service.py  test_skeleton.py
services/camoufox_worker/worker/: __init__.py  config.py  jobs.py  main.py  models.py  queue.py  runner_client.py  runner_native.py  runner_orch.py  service.py
services/gateway/: AGENTS.md  AGENT_NOTES.md  Dockerfile  README-TASK.md  README.md  pyproject.toml
services/gateway/app/: README-TASK.md  __init__.py  config.py  main.py
services/gateway/app/models/: __init__.py  session_launch.py  workstations.py
services/gateway/app/routers/: __init__.py  events.py  runners.py  sessions.py  workstations.py
services/gateway/app/security/: __init__.py  keycloak.py  vnc.py
services/gateway/app/services/: discovery.py  runner_client.py  runner_health.py  runner_registry.py  runner_ws_proxy.py  session_registry.py  vnc_overrides.py  workstation_registry.py
services/gateway/tests/: conftest.py  test_config.py  test_contract_synchronization.py  test_events_auth.py  test_gateway.py  test_runner_client.py  test_runner_discovery.py  test_runner_health.py  test_runner_registry.py  test_security.py  test_session_websocket.py  test_skeleton.py  test_workstations.py
services/runner/: AGENTS.md  AGENT_NOTES.md  Dockerfile  README-TASK.md  pyproject.toml
services/runner/app/: README-TASK.md  __init__.py  browser.py  browser_flags.py  events.py  logging.py  main.py  metrics.py  session_manager.py  vnc.py  warm_pool.py  workstation_events.py
services/runner/app/config/: __init__.py  settings.py  warm_pool.py
services/runner/app/dependencies/: __init__.py  session_manager.py
services/runner/app/routers/: __init__.py  workstations.py
services/runner/config/: browser-prefs.local.json  warm-pool.local.json
services/runner/docker/assets/fontconfig/: 99-windows-fonts.conf
services/runner/docker/scripts/: install-windows-fonts.sh
services/runner/tests/: conftest.py  playwright_stub_server.py  test_browser.py  test_config_warm_pool.py  test_event_publisher_stress.py  test_events.py  test_main.py  test_session_integration.py  test_session_manager.py  test_skeleton.py  test_warm_pool.py  test_workstations_api.py  test_workstations_router.py
services/vnc-gateway/: AGENTS.md  AGENT_NOTES.md  Dockerfile  README-TASK.md  pyproject.toml
services/vnc-gateway/app/: README-TASK.md
services/vnc-gateway/app/camou_vnc_gateway/: __init__.py  config.py  dependencies.py  main.py  metrics.py  proxy.py  routes.py  token.py
services/vnc-gateway/tests/: __init__.py  conftest.py  dummy_metrics_backend.py  stubs.py  test_app.py  test_http_proxy_headers.py  test_metrics_configuration.py  test_proxy.py  test_proxy_integration.py  test_target_port.py
shared/: __init__.py  version.py  websocket_bridge.py
shared/tests/: test_versions.py  test_websocket_bridge.py
ui/: TASK.md  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  api.ts  styles.css
ui/src/components/: LaunchSessionForm.tsx  PinnedSessions.tsx  SessionControls.tsx  SessionDetails.tsx  SessionTable.tsx  SessionWallboard.tsx  WorkerList.tsx
ui/src/utils/: session.ts  time.ts  vnc.ts
vnc-gateway/: pyproject.toml
vnc-gateway/camofleet_vnc_gateway/: __init__.py  __main__.py  config.py  main.py
vnc-gateway/tests/: test_config.py  test_headers.py  test_target_port.py  test_urls.py
worker/: openapi.worker.yaml  pyproject.toml
worker/camofleet_worker/: __init__.py  __main__.py  config.py  main.py  models.py  runner_client.py
worker/tests/: test_runner_client.py  test_worker.py
(+62 files in other folders)
