[tool.poetry]
name = "camoufox-worker"
version = "0.1.0"
description = "Background worker for GhostBrowsers (Camoufox native/orchestrator modes)"
packages = [{ include = "worker" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pydantic = "^2.8.2"
anyio = "^4.4.0"
httpx = "^0.27.2"
camoufox = { version = "^0.4.11", extras = ["geoip"] }
prometheus-client = "^0.20.0"
redis = "^5.0.7"
aio-pika = "^9.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ruff = "^0.6.9"
click = "^8.1.7"
pytest-cov = "^5.0.0"

[tool.pytest.ini_options]
addopts = "--strict-markers --maxfail=1"
markers = [
    "anyio: mark tests requiring the AnyIO event loop",
]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
