[tool.poetry]
name = "camou-gateway"
version = "0.1.0"
description = "Ghost-browsers Gateway service"
authors = ["Ghost Browsers Team <engineering@ghost-browsers.local>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
python-jose = "^3.3.0"
httpx = "^0.27.2"
pydantic = "^2.8.2"
anyio = "^4.4.0"
"camou-core" = { path = "../../packages/core", develop = true }
prometheus-client = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ruff = "^0.6.9"
pytest-cov = "^5.0.0"

[tool.pytest.ini_options]
addopts = "--strict-markers --maxfail=1"
markers = [
    "anyio: mark tests requiring the AnyIO event loop",
]
testpaths = ["tests"]
