[tool.poetry]
name = "camou-runner"
version = "0.1.0"
description = "Ghost-browsers Session Runner (to be implemented)"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
pydantic = "^2.8.2"
httpx = "^0.27.2"
anyio = "^4.4.0"
camoufox = "^0.9.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ruff = "^0.6.9"
