[tool.poetry]
name = "camou-vnc-gateway"
version = "0.1.0"
description = "ghost-browsers VNC Gateway (to be implemented)"
packages = []

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
websockets = "^12.0"
httpx = "^0.27.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ruff = "^0.6.9"
