[tool.poetry]
name = "camou-vnc-gateway"
version = "0.1.0"
description = "Ghost-browsers VNC Gateway (to be implemented)"
authors = ["Ghost Browsers Team <engineering@ghost-browsers.local>"]
packages = [{ include = "camou_vnc_gateway", from = "app" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
websockets = "^12.0"
httpx = "^0.27.2"
pydantic-settings = "^2.6.0"
python-jose = "^3.3.0"
prometheus-client = "^0.21.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ruff = "^0.6.9"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
